--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h4>Monthly Subscriprion</h4>
      <p id = 'pTag'>$29</p><p id = 'inline'>per month</p>
         <p>Full access for less than $1 a day</p>
-       <button id = 'signUp'>Sign Up</button> 
+       <button id = 'signUp' onclick= 'message()'>Sign Up</button> 
       </div>
       <div class = 'right-box box'>
         <h4>Why Us</h4>
