--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p class='text'>Tutorials by industry experts </br>Peer & expert code review </br>Coding excercises</br>Access to our Github repos</br> Community forum</br>Flashcard decks</br>New video every week</p>
       </div>
     </div>
-      <script src = "index.js"></script>
+      <script src = "./index.js"></script>
        </body>
       
 </html>
