--- a/index.html
+++ b/index.html
@@ -8,21 +8,22 @@
   </head>
     <body>
     <div class = 'main-container'>
-      <h2>Join our community</h2>
-      <h3>30-day,hassle-free money back guarantee</h3>
-      <p>Gain access to our full library of tutorials alog with expert code reviews.</br>Perfect for any developerswho are serious about honing their skills.</p>
-      <div class = 'left-box box'>
-        <h4>Monthly Subscriprion</h4>
-     <p id = 'pTag'>$29</p><p id = 'inline'>per month</p>
-        <p>Full access for less than $1 a day</p>
-       <button id = 'signUp' onclick= 'message()'>Sign Up</button> 
-      </div>
-      <div class = 'right-box box'>
-        <h4>Why Us</h4>
-        <p class='text'>Tutorials by industry experts </br>Peer & expert code review </br>Coding excercises</br>Access to our Github repos</br> Community forum</br>Flashcard decks</br>New video every week</p>
-      </div>
-    </div>
-      <script src = "./index.js"></script>
+  <div class = 'upper-portion'>
+  <h2>Join our community</h2>
+  <h3>30-day,hassle-free money back guarantee</h3>
+  <p>Gain access to our full library of tutorials alog with expert code reviews.</br>Perfect for any developerswho are serious about honing their skills.</p>
+  </div>
+  <div class = 'left-box box'>
+    <h4>Monthly Subscriprion</h4>
+ <p id = 'pTag'>$29</p><p id = 'inline'>per month</p>
+    <p>Full access for less than $1 a day</p>
+   <button id = 'signUp' onclick = 'message()'>Sign Up</button> 
+  </div>
+  <div class = 'right-box box'>
+    <h4>Why Us</h4>
+    <p class='text'>Tutorials by industry experts </br>Peer & expert code review </br>Coding excercises</br>Access to our Github repos</br> Community forum</br>Flashcard decks</br>New video every week</p>
+  </div>
+</div>
        </body>
       
 </html>
